user page edited

--- a/client/Homepage/index.html
+++ b/client/Homepage/index.html
@@ -102,7 +102,9 @@
               <li>Design</li>
               <li>Coding</li>
               <li>Fun</li>
-              <i onclick="changeBookmarkIcon(this)" class="fa-regular fa-bookmark"></i>
+              <div class="bookmark">
+                <i onclick="changeBookmarkIcon(this)" class="fa-regular fa-bookmark"></i>
+              </div>
             </ul>
           </div>
           <div class="desc desc-white">Lorem ipsum dolor sit amet consectetur.</div>
@@ -121,7 +123,9 @@
               <li>Design</li>
               <li>Coding</li>
               <li>Fun</li>
-              <i onclick="changeBookmarkIcon(this)" class="fa-regular fa-bookmark"></i>
+              <div class="bookmark">
+                <i onclick="changeBookmarkIcon(this)" class="fa-regular fa-bookmark"></i>
+                </div>
             </ul>
           </div>
           <div class="desc desc-white">Lorem ipsum dolor sit amet consectetur.</div>
@@ -140,7 +144,9 @@
               <li>Design</li>
               <li>Coding</li>
               <li>Fun</li>
-              <i onclick="changeBookmarkIcon(this)" class="fa-regular fa-bookmark"></i>
+              <div class="bookmark">
+                <i onclick="changeBookmarkIcon(this)" class="fa-regular fa-bookmark"></i>
+              </div>          
             </ul>
           </div>
           <div class="desc desc-white">Lorem ipsum dolor sit amet consectetur.</div>
@@ -159,7 +165,9 @@
               <li>Design</li>
               <li>Coding</li>
               <li>Fun</li>
-              <i onclick="changeBookmarkIcon(this)" class="fa-regular fa-bookmark"></i>
+              <div class="bookmark">
+                <i onclick="changeBookmarkIcon(this)" class="fa-regular fa-bookmark"></i>
+              </div>
             </ul>
           </div>
           <div class="desc desc-white">Lorem ipsum dolor sit amet consectetur.</div>
@@ -179,7 +187,9 @@
               <li>Design</li>
               <li>Coding</li>
               <li>Fun</li>
-              <i onclick="changeBookmarkIcon(this)" class="fa-regular fa-bookmark"></i>
+              <div class="bookmark">
+                <i onclick="changeBookmarkIcon(this)" class="fa-regular fa-bookmark"></i>
+              </div>
             </ul>
           </div>
           <div class="desc desc-white">Lorem ipsum dolor sit amet consectetur.</div>
@@ -198,7 +208,9 @@
               <li>Design</li>
               <li>Coding</li>
               <li>Fun</li>
-              <i onclick="changeBookmarkIcon(this)" class="fa-regular fa-bookmark"></i>
+              <div class="bookmark">
+                <i onclick="changeBookmarkIcon(this)" class="fa-regular fa-bookmark"></i>
+              </div>
             </ul>
           </div>
           <div class="desc desc-white">Lorem ipsum dolor sit amet consectetur.</div>
