user page fixed

--- a/client/User/index.html
+++ b/client/User/index.html
@@ -67,7 +67,7 @@
   <!--______________________ MYBLOGS_____________________ -->
 
   <section id="myblogs">
-    <section id="recent 1">
+    <div id="recent 1">
       <div class="recent-wrap">
         <h2>
           Your <span>BLOGs</span>....
@@ -75,8 +75,8 @@
       </div>
       <div class="latest-cards row 1">
       </div>
-    </section>
-    <section id="recent 2">
+    </div>
+    <div id="recent 2">
       <div class="recent-wrap">
         <h2>
           Bookmarked <span>BLOGs</span>....
@@ -84,20 +84,22 @@
       </div>
       <div class="latest-cards row 2">
       </div>
-    </section>
+    </div>
+  </section>
+  <section id="follow-following">
     <section id="categories followers-section">
       <h2 style="color: rgb(255, 255, 255);"><span>Followers....</span> </h2>
-      <div class="category-wrap follower-class" id="category-id followers-id">
-      </div>
-    </section>
-
-
-    <section id="categories">
-      <h2 style="color: rgb(255, 255, 255);"><span> Followings....</span></h2>
-      <div class="category-wrap followings-class" id="category-id followings-id">
-      </div>
-    </section>
+    <div class="category-wrap follower-class" id="category-id followers-id">
+    </div>
   </section>
+  
+  
+  <section id="categories">
+    <h2 style="color: rgb(255, 255, 255);"><span> Followings....</span></h2>
+    <div class="category-wrap followings-class" id="category-id followings-id">
+    </div>
+  </section>
+</section>
 
   
   <script src="script.js"></script>
