--- a/client/Homepage/index.html
+++ b/client/Homepage/index.html
@@ -299,7 +299,7 @@
         &#169; UnFold-all right reserved
       </div>
     </footer>
-    <script src="script.js"></script>
+    <script type="module" src="script.js"></script>
   </body>
   
 </html>
