follow-unfollow feature implemented

--- a/client/User/index.html
+++ b/client/User/index.html
@@ -61,7 +61,7 @@
                   </div>
                 </div> -->
       <div class="follow">
-        <button class="follow-btn" >Follow</button>
+        <button class="follow-btn" id="follow-unfollow-edit">Follow</button>
       </div>
       <div class="user-desc">
       </div>
