--- a/client/Blog-opening/blog-opening.html
+++ b/client/Blog-opening/blog-opening.html
@@ -263,28 +263,8 @@
 
     <!-- script file included -->
 
-    <script src="https://code.jquery.com/jquery-3.6.1.js" integrity="sha256-3zlB5s2uwoUzrXK3BT7AX3FyvojsraNFxCc2vC/7pNI=" crossorigin="anonymous"></script>
-    <script src="index.js"></script>
+<script src="index.js" type="module"></script>
 </body>
-<script>
-  function leftScroll() {
-    const left = document.querySelector(".scroll-images");
-    left.scrollBy(-200, 0);
-  }
-  function rightScroll() {
-    const right = document.querySelector(".scroll-images");
-    right.scrollBy(200, 0);
-  }
-  $(window).scroll(function () {
-     var s = $(window).scrollTop(),
-           d = $(document).height(),
-           c = $(window).height();
-           scrollPercent = (s / (d-c)) * 100;
-           var position = scrollPercent;
-   
-      $("#progressbar").attr('value', position);
-   
-});
 </script>
 
 </html>
