--- a/client/Homepage/index.html
+++ b/client/Homepage/index.html
@@ -88,137 +88,10 @@
     <section id="recent">
       <div class="recent-wrap">
         <h2>
-          See latest <span>BLOGs</span> you follow!
+          See latest <span>blogs by users</span> you follow!
         </h2>
       </div>
       <div class="latest-cards row">
-      <div class="follow-cards column">
-        <div class="blog-details">
-          <div class="child child-white">
-            <img src="../assets/travel.jpg" alt="" />
-          </div>
-          <div class="tag-wrap">
-            <ul class="tags">
-              <li>Design</li>
-              <li>Coding</li>
-              <li>Fun</li>
-              <div class="bookmark">
-                <i onclick="changeBookmarkIcon(this)" class="fa-regular fa-bookmark"></i>
-              </div>
-            </ul>
-          </div>
-          <div class="desc desc-white">Lorem ipsum dolor sit amet consectetur.</div>
-          <div class="desc2 desc2-white">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit.
-          </div>
-        </div>
-      </div>
-      <div class="follow-cards column">
-        <div class="blog-details">
-          <div class="child child-white">
-            <img src="../assets/horror.jpg" alt="" />
-          </div>
-          <div class="tag-wrap">
-            <ul class="tags">
-              <li>Design</li>
-              <li>Coding</li>
-              <li>Fun</li>
-              <div class="bookmark">
-                <i onclick="changeBookmarkIcon(this)" class="fa-regular fa-bookmark"></i>
-                </div>
-            </ul>
-          </div>
-          <div class="desc desc-white">Lorem ipsum dolor sit amet consectetur.</div>
-          <div class="desc2 desc2-white">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit.
-          </div>
-        </div>
-      </div>
-      <div class="follow-cards column">
-        <div class="blog-details">
-          <div class="child child-white">
-            <img src="../assets/fit.jpg" alt="" />
-          </div>
-          <div class="tag-wrap">
-            <ul class="tags">
-              <li>Design</li>
-              <li>Coding</li>
-              <li>Fun</li>
-              <div class="bookmark">
-                <i onclick="changeBookmarkIcon(this)" class="fa-regular fa-bookmark"></i>
-              </div>          
-            </ul>
-          </div>
-          <div class="desc desc-white">Lorem ipsum dolor sit amet consectetur.</div>
-          <div class="desc2 desc2-white">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit.
-          </div>
-        </div>
-      </div>
-      <div class="follow-cards column">
-        <div class="blog-details">
-          <div class="child child-white">
-            <img src="../assets/dish1.jpg" alt="" />
-          </div>
-          <div class="tag-wrap">
-            <ul class="tags">
-              <li>Design</li>
-              <li>Coding</li>
-              <li>Fun</li>
-              <div class="bookmark">
-                <i onclick="changeBookmarkIcon(this)" class="fa-regular fa-bookmark"></i>
-              </div>
-            </ul>
-          </div>
-          <div class="desc desc-white">Lorem ipsum dolor sit amet consectetur.</div>
-          <div class="desc2 desc2-white">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit.
-          </div>
-        </div>
-      </div>
-     
-      <div class="follow-cards column">
-        <div class="blog-details">
-          <div class="child child-white">
-            <img src="../assets/dish2.jpg" alt="" />
-          </div>
-          <div class="tag-wrap">
-            <ul class="tags">
-              <li>Design</li>
-              <li>Coding</li>
-              <li>Fun</li>
-              <div class="bookmark">
-                <i onclick="changeBookmarkIcon(this)" class="fa-regular fa-bookmark"></i>
-              </div>
-            </ul>
-          </div>
-          <div class="desc desc-white">Lorem ipsum dolor sit amet consectetur.</div>
-          <div class="desc2 desc2-white">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit.
-          </div>
-        </div>
-      </div>
-      <div class="follow-cards column">
-        <div class="blog-details">
-          <div class="child child-white">
-            <img src="../assets/blogPic.jpg" alt="" />
-          </div>
-          <div class="tag-wrap">
-            <ul class="tags">
-              <li>Design</li>
-              <li>Coding</li>
-              <li>Fun</li>
-              <div class="bookmark">
-                <i onclick="changeBookmarkIcon(this)" class="fa-regular fa-bookmark"></i>
-              </div>
-            </ul>
-          </div>
-          <div class="desc desc-white">Lorem ipsum dolor sit amet consectetur.</div>
-          <div class="desc2 desc2-white">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit.
-          </div>
-        </div>
-      </div>
     </div>
     </section>
 
