added local host

--- a/client/User/index.html
+++ b/client/User/index.html
@@ -43,7 +43,7 @@
   <!---------------------- creating-user-profile------------------------>
   <section id="profile-user">
     <div class="profile-user-wrap">
-      <div class="profile-user-img">
+      <!-- <div class="profile-user-img">
                 <img src="../assets/person1.jpg" alt="" />
                 </div>
                 <div class="profile-user-name">
@@ -59,7 +59,7 @@
                   <div class="blogs stats">
                     <div class="count">100 </div><div>Blogs</div>
                   </div>
-                </div>
+                </div> -->
       <div class="follow">
         <button class="follow-btn" >Follow</button>
       </div>
@@ -73,7 +73,7 @@
   <!--______________________ MYBLOGS_____________________ -->
 
   <section id="myblogs">
-    <section id="recent1">
+    <section id="recent 1">
       <div class="recent-wrap">
         <h2>
           Your <span>BLOGs</span>....
@@ -82,7 +82,7 @@
       <div class="latest-cards row 1">
       </div>
     </section>
-    <section id="recent2">
+    <section id="recent 2">
       <div class="recent-wrap">
         <h2>
           Bookmarked <span>BLOGs</span>....
