user page updated

--- a/client/Homepage/index.html
+++ b/client/Homepage/index.html
@@ -101,8 +101,8 @@
     <!----------------------- footer------------------------- -->
     <footer>
       <div class="subscribe">
-        <div>
-          Subscribe to Us !
+        <div class="subscribe-us">
+          Subscribe to <span style="color: #f8bf8c;">New Posts </span>!
         </div>
         <div class="subscribe-input-btn">
           <input placeholder="Your email address" class="subscribe-input" type="text">
