login-signup page updated

--- a/client/login-signup/index.html
+++ b/client/login-signup/index.html
@@ -27,26 +27,10 @@
     <title>Login/SignUp</title>
   </head>
   <body>
-    <!-- <div class="navbar-container">
-        <nav>
-            <div class="name">Un<span>Fold</span></div>
-            <div>
-               <ul class="nav-list">
-                <li><a href="/">Home</a></li>
-                <li><a href="/about">About</a></li>
-                <li><a href="/contact">Contact</a></li>
-                <i class="fas fa fa-search" style="color: white"></i>
-                <input class="input" type="text" placeholder="Search.." />
-              </ul> 
-            </div>
-          </nav>
-    </div> -->
-
     <div class="hero">
       <div class="unfold">
         <div class="name">
-          <span>Un</span>
-          <span>Fold</span>
+          Un<span>Fold</span>
         </div>
         <div class="landing-desc">
           This is a blogging website to connect ideas and people around the
