--- a/client/Blog-opening/blog-opening.html
+++ b/client/Blog-opening/blog-opening.html
@@ -18,6 +18,7 @@
 </head>
 
 <body>
+  <div id="loading"></div>
   <!-- <progress value="0.12234353" max="1"></progress> -->
   <section id="Landing">
     <!-- creating the nav -->
@@ -285,25 +286,4 @@
 <script src="index.js" type="module"></script>
 </body>
 <script src="../currentuser.js" type="module"></script>
-<script>
-//   function leftScroll() {
-//     const left = document.querySelector(".scroll-images");
-//     left.scrollBy(-200, 0);
-//   }
-//   function rightScroll() {
-//     const right = document.querySelector(".scroll-images");
-//     right.scrollBy(200, 0);
-//   }
-//   $(window).scroll(function () {
-//      var s = $(window).scrollTop(),
-//            d = $(document).height(),
-//            c = $(window).height();
-//            scrollPercent = (s / (d-c)) * 100;
-//            var position = scrollPercent;
-   
-//       $("#progressbar").attr('value', position);
-   
-// });
-</script>
-
 </html>
