--- a/client/search/index.html
+++ b/client/search/index.html
@@ -17,7 +17,8 @@
   <link  rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"/>
   <title>search</title>
 </head>
-<body>
+<body> 
+  <div id="loading"></div>
   <section id="Landing">
     <nav>
       <div class="logo">
