--- a/client/Homepage/index.html
+++ b/client/Homepage/index.html
@@ -33,9 +33,9 @@
           <a href="#" class="name">Un<span>Fold</span> </a>
         </div>
           <ul class="nav-list">
-            <li class="nav-item"><a class="nav-link" href="/">Home</a></li>
-            <li class="nav-item"><a class="nav-link" href="/about">About</a></li>
-            <li class="nav-item"><a class="nav-link" href="/contact">Contact</a></li>
+            <li class="nav-item nav-current"><a class="nav-link" href="/">Home</a></li>
+            <li class="nav-item"><a class="nav-link" href="/about">Compose</a></li>
+            <li class="nav-item"><a class="nav-link" href="/contact">Profile</a></li>
             <i class="fas fa fa-search" style="color: white"></i>
             <input class="input" type="text" placeholder="Search.." />
           </ul>
