--- a/public/compose/texteditor.html
+++ b/public/compose/texteditor.html
@@ -20,7 +20,7 @@
 </head>
 
 <body>
-  
+  <div id="loading"></div>
   <nav>
     <div class="logo">
       <img src="../assets/High Resolution Logo - Transparent Background.png" alt="">
