--- a/public/login-signup/index.html
+++ b/public/login-signup/index.html
@@ -27,6 +27,8 @@
     <title>Login/SignUp</title>
   </head>
   <body>
+    <div id="loading"></div>
+
     <div class="hero">
       <div class="unfold">
         <div class="name">
