--- a/client/Homepage/index.html
+++ b/client/Homepage/index.html
@@ -33,7 +33,7 @@
         <li class="nav-item"><a class="nav-link" href="/about">About</a></li>
         <li class="nav-item"><a class="nav-link" href="/contact">Contact</a></li>
         <i class="fas fa fa-search" style="color: white"></i>
-        <input class="input" type="text" placeholder="Search.." />
+        <input class="input" type="text" placeholder="Search.." onkeypress="handle(event)" />
       </ul>
       </div>
       <div class="hamburger">
