nav-bar updated

--- a/client/Homepage/index.html
+++ b/client/Homepage/index.html
@@ -30,10 +30,12 @@
       </div>
       <ul class="nav-list">
         <li class="nav-item"><a class="nav-link" href="/">Home</a></li>
-        <li class="nav-item"><a class="nav-link" href="/about">About</a></li>
-        <li class="nav-item"><a class="nav-link" href="/contact">Contact</a></li>
-        <i class="fas fa fa-search" style="color: white"></i>
-        <input class="input" type="text" placeholder="Search.." onkeypress="handle(event)" />
+        <li class="nav-item"><a class="nav-link" href="../search/index.html">Search</a></li>
+        <li class="nav-item"><a class="nav-link" href="../compose/texteditor.html">Compose</a></li>
+        <li class="nav-item nav-item-profile"></li>
+        <li></li>
+        <!-- <i class="fas fa fa-search" style="color: white"></i>
+        <input class="input" type="text" placeholder="Search.." onkeypress="handle(event)" /> -->
       </ul>
       </div>
       <div class="hamburger">
