--- a/public/Homepage/index.html
+++ b/public/Homepage/index.html
@@ -34,7 +34,7 @@
         <li class="nav-item"><a class="nav-link" href="/contact">Contact</a></li>
         <i class="fas fa fa-search" style="color: white"></i>
         <input class="input" type="text" placeholder="Enter keyword..." />
-        <button class="myBtn" type="submit" onclick="myFunction()">Search</button>
+        <button class="myBtn" type="submit">Search</button>
       </ul>
       </div>
       <div class="hamburger">
