--- a/client/User/index.html
+++ b/client/User/index.html
@@ -26,7 +26,7 @@
       <a href="#" class="name">Un<span>Fold</span> </a>
     </div>
       <ul class="nav-list">
-        <li class="nav-item"><a class="nav-link" href="/">Home</a></li>
+        <li class="nav-item"><a class="nav-link" href="../Homepage/index.html">Home</a></li>
         <li class="nav-item"><a class="nav-link" href="../search/index.html">Search</a></li>
         <li class="nav-item"><a class="nav-link" href="../compose/texteditor.html">Compose</a></li>
         <li class="nav-item nav-item-profile"></li>
