--- a/public/Blog-opening/blog-opening.html
+++ b/public/Blog-opening/blog-opening.html
@@ -28,7 +28,7 @@
         <a href="#" class="name">Un<span>Fold</span> </a>
       </div>
         <ul class="nav-list">
-          <li class="nav-item"><a class="nav-link" href="/">Home</a></li>
+          <li class="nav-item"><a class="nav-link" href="../Homepage/index.html">Home</a></li>
           <li class="nav-item"><a class="nav-link" href="/about">About</a></li>
           <li class="nav-item"><a class="nav-link" href="/contact">Contact</a></li>
           <i class="fas fa fa-search" style="color: white"></i>
