--- a/client/edit-profile/editprofile.html
+++ b/client/edit-profile/editprofile.html
@@ -20,6 +20,7 @@
     />
 </head>
 <body>
+  <div id="loading"></div>
     <section id="edit_profile">
         <nav>
             <div class="logo">
@@ -93,5 +94,6 @@
         </div>
 
     </section>
+    <script src="./editprofile.js"></script>
 </body>
 </html>
