--- a/client/User/index.html
+++ b/client/User/index.html
@@ -82,13 +82,13 @@
       <div class="latest-cards row 1">
       </div>
     </div>
-    <div id="recent 2">
+    <div id="recent 2 " class="Bookmarked-blogs">
       <div class="recent-wrap">
         <h2>
           Bookmarked <span>BLOGs</span>....
         </h2>  
       </div>
-      <div class="latest-cards row 2">
+      <div class="latest-cards row 2" id="bookmarked-blog-card">
       </div>
     </div>
   </section>
@@ -100,13 +100,14 @@
   </section>
   
   
-  <section id="categories">
+  <section id="categories following-section">
     <h2 style="color: rgb(255, 255, 255);"><span> Followings....</span></h2>
     <div class="category-wrap followings-class" id="category-id followings-id">
     </div>
   </section>
 </section>
 
+  <!-- <div class="footer-stats-partition"></div> -->
 
   <!----------------------- footer------------------------- -->
   <footer>
