changes in backend

--- a/public/User/index.html
+++ b/public/User/index.html
@@ -82,13 +82,13 @@
       <div class="latest-cards row 1">
       </div>
     </div>
-    <div id="recent 2">
+    <div id="recent 2 " class="Bookmarked-blogs">
       <div class="recent-wrap">
         <h2>
           Bookmarked <span>BLOGs</span>....
         </h2>  
       </div>
-      <div class="latest-cards row 2">
+      <div class="latest-cards row 2" id="bookmarked-blog-card">
       </div>
     </div>
   </section>
@@ -100,12 +100,89 @@
   </section>
   
   
-  <section id="categories">
+  <section id="categories following-section">
     <h2 style="color: rgb(255, 255, 255);"><span> Followings....</span></h2>
     <div class="category-wrap followings-class" id="category-id followings-id">
     </div>
   </section>
 </section>
+
+  <!-- <div class="footer-stats-partition"></div> -->
+
+  <!----------------------- footer------------------------- -->
+  <footer>
+    <div class="subscribe">
+      <div class="subscribe-us">
+        Subscribe to <span style="color: #f8bf8c;">New Posts </span>!
+      </div>
+      <div class="subscribe-input-btn">
+        <input placeholder="Your email address" class="subscribe-input" type="text">
+        <button class="footer-btn">Subscribe</button>
+      </div>
+    </div>
+    <div class="main-footer">
+      <div class="footer-name">
+        <div class="name company-name">Un<span>Fold</span></div>
+        <div class="footer-desc">Unfold your ideas,experiences and knowledge here.</div>
+      </div>
+      <div class="footer-column">
+        <div class="footer-heading">
+          <h3>Company</h3>
+        </div>
+        <div class="footer-links">
+          <ul>
+            <li><a href="#">About Us</a></li>
+            <li><a href="#">Contact Us</a></li>
+            <li><a href="#">Careers</a></li>
+            <li><a href="#">Terms & Conditions</a></li>
+            <li><a href="#">Privacy Policy</a></li>
+          </ul>
+        </div>
+      </div>
+      <div class="footer-column">
+        <div class="footer-heading">
+          <h3>Help</h3>
+        </div>
+        <div class="footer-links">
+          <ul>
+            <li><a href="#">FAQ</a></li>
+            <li><a href="#">Shipping</a></li>
+            <li><a href="#">Returns</a></li>
+            <li><a href="#">Order Status</a></li>
+            <li><a href="#">Payment Options</a></li>
+          </ul>
+        </div>
+      </div>
+      <div class="footer-column">
+        <div class="footer-heading">
+          <h3>Follow Us</h3>
+        </div>
+        <div class="footer-links">
+          <ul>
+            <li><a href="#">Facebook</a></li>
+            <li><a href="#">Twitter</a></li>
+            <li><a href="#">Instagram</a></li>
+            <li><a href="#">Youtube</a></li>
+            <li><a href="#">Pinterest</a></li>
+          </ul>
+        </div>
+      </div>
+      <div class="footer-column">
+        <div class="footer-heading">
+          <h3>Download App</h3>
+        </div>
+        <div class="footer-links">
+          <ul>
+            <li><a href="#">Play Store</a></li>
+            <li><a href="#">App Store</a></li>
+          </ul>
+        </div>
+      </div>
+    </div>
+    <div class="rights">
+      &#169; UnFold-all right reserved
+    </div>
+  </footer>
 
   
   <script src="script.js" type="module"></script>
