--- a/public/edit-profile/editprofile.html
+++ b/public/edit-profile/editprofile.html
@@ -80,14 +80,14 @@
                 ></textarea>
                 <p style="color: #252525">Change your profile pic</p>
                 <input type="file" name="item" id="register-img" />
-                <input
+                <!-- <input
                   class="input-field"
                   placeholder="Change Password"
                   name="password"
                   id="register-pass"
                   required
-                />
-                <button type="button" class="submit-btn" onclick="">
+                /> -->
+                <button type="button" class="submit-btn" id="submit-btn" onclick="">
                   Update your profile
                 </button>
               </form>
