--- a/client/index.html
+++ b/client/index.html
@@ -25,6 +25,7 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
     />
     <title>Login/SignUp</title>
+    <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
   </head>
   <body>
     <div id="loading"></div>
