Reverted to localtesting and added delete blog functionality

--- a/client/User/index.html
+++ b/client/User/index.html
@@ -107,7 +107,16 @@
   </section>
 </section>
 
-  <!-- <div class="footer-stats-partition"></div> -->
+  <!-- The Modal -->
+  <div id="myModal" class="modal">
+    <!-- Modal content -->
+    <div class="modal-content">
+      <span class="close" >&times;</span>
+      <p id="para" style="color:black; font-size:xx-large;" ></p>
+      <button id="mb1">Yes</button>
+      <button id="mb2">No</button>
+    </div>
+  </div>
 
   <!----------------------- footer------------------------- -->
   <footer>
