--- a/client/login-signup/index.html
+++ b/client/login-signup/index.html
@@ -25,7 +25,6 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
     />
     <title>Login/SignUp</title>
-    <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
   </head>
   <body>
     <div id="loading"></div>
@@ -143,6 +142,6 @@
 
     <!-- ----------------- including script files ----------------- -->
     <!-- <script src="https://code.jquery.com/jquery-3.6.1.js" integrity="sha256-3zlB5s2uwoUzrXK3BT7AX3FyvojsraNFxCc2vC/7pNI=" crossorigin="anonymous"></script> -->
-    <script src="./script.js" type="module"></script>
+    <script src="script.js" type="module"></script>
   </body>
 </html>
