decreased follower img size

--- a/client/User/index.html
+++ b/client/User/index.html
@@ -101,7 +101,7 @@
   
   
   <section id="categories following-section">
-    <h2 style="color: rgb(255, 255, 255);"><span> Followings....</span></h2>
+    <h2 style="color: rgb(255, 255, 255);"><span> Following....</span></h2>
     <div class="category-wrap followings-class" id="category-id followings-id">
     </div>
   </section>
