search page done

--- a/client/search/index.html
+++ b/client/search/index.html
@@ -31,7 +31,7 @@
           <li class="nav-item"><a class="nav-link" href="/contact">Contact</a></li>
           <i class="fas fa fa-search" style="color: white"></i>
           <input class="input search-input" type="text" placeholder="Search.." />
-          <button onclick="searchtheword()">Search</button>
+          <!-- <button onclick="searchtheword()" class="search-btn">Search</button> -->
         </ul>
       </div>
       <div class="hamburger">
