--- a/client/search/index.html
+++ b/client/search/index.html
@@ -27,11 +27,10 @@
       </div>
         <ul class="nav-list">
           <li class="nav-item"><a class="nav-link" href="../Homepage/index.html">Home</a></li>
-          <li class="nav-item"><a class="nav-link" href="/about">About</a></li>
-          <li class="nav-item"><a class="nav-link" href="/contact">Contact</a></li>
+          <li class="nav-item"><a class="nav-link" href="../compose/texteditor.html">Compose</a></li>
           <i class="fas fa fa-search" style="color: white"></i>
           <input class="input search-input" type="text" placeholder="Search.." />
-          <!-- <button onclick="searchtheword()" class="search-btn">Search</button> -->
+          <button onclick="searchtheword()" class="search-btn">Search</button>
         </ul>
       </div>
       <div class="hamburger">
