user page navigation to followers/ings done

--- a/client/Blog-opening/blog-opening.html
+++ b/client/Blog-opening/blog-opening.html
@@ -99,7 +99,7 @@
               <div class="like">
                 <i class="fa-regular fa-heart" 
                  id="heart"></i>
-                 <div class="likes_count">0 Likes</div>
+                 <div class="likes_count" id="likes-section">0 Likes</div>
               </div>
               <div class="comment">
                 <i class="fa-regular fa-comment"></i>
