blog opening updated

--- a/client/Blog-opening/blog-opening.html
+++ b/client/Blog-opening/blog-opening.html
@@ -95,7 +95,7 @@
             aliquam quam ipsa excepturi ad eos ea accusantium. Nemo accusamus ab incidunt atque inventore temporibus ratione, fuga,
             porro similique, est natus eius unde quisquam dolores eveniet? Iure nisi repudiandae quisquam recusandae ex natus at
             voluptatem aut soluta laboriosam? Eum consectetur iure rerum reiciendis! -->
-            <div class="reactions">
+            <section class="reactions" id="reactions-id">
               <div class="like">
                 <i class="fa-regular fa-heart" 
                  id="heart"></i>
@@ -105,7 +105,7 @@
                 <i class="fa-regular fa-comment"></i>
                 <div class="comments_count">0 Comments</div>
               </div>
-            </div>
+            </section>
           </div>
 
           <div id="all_comments">
@@ -155,7 +155,7 @@
                 <button type="button" id="commbtn" >Comment</button>
               </div>
             </div>
-        </div>
+          </div>
           <!-- <section id="app">
             <div class="container">
               <div class="row">
