--- a/public/User/index.html
+++ b/public/User/index.html
@@ -82,7 +82,7 @@
       <div class="latest-cards row 1">
       </div>
     </div>
-    <div id="recent 2 " class="Bookmarked-blogs">
+    <div id="recent 2" class="Bookmarked-blogs">
       <div class="recent-wrap">
         <h2>
           Bookmarked <span>BLOGs</span>....
@@ -101,13 +101,22 @@
   
   
   <section id="categories following-section">
-    <h2 style="color: rgb(255, 255, 255);"><span> Followings....</span></h2>
+    <h2 style="color: rgb(255, 255, 255);"><span> Following....</span></h2>
     <div class="category-wrap followings-class" id="category-id followings-id">
     </div>
   </section>
 </section>
 
-  <!-- <div class="footer-stats-partition"></div> -->
+  <!-- The Modal -->
+  <div id="myModal" class="modal">
+    <!-- Modal content -->
+    <div class="modal-content">
+      <span class="close" >&times;</span>
+      <p id="para" style="color:black; font-size:xx-large;" ></p>
+      <button id="mb1">Yes</button>
+      <button id="mb2">No</button>
+    </div>
+  </div>
 
   <!----------------------- footer------------------------- -->
   <footer>
