--- a/public/Blog-opening/blog-opening.html
+++ b/public/Blog-opening/blog-opening.html
@@ -29,10 +29,8 @@
       </div>
         <ul class="nav-list">
           <li class="nav-item"><a class="nav-link" href="../Homepage/index.html">Home</a></li>
-          <li class="nav-item"><a class="nav-link" href="/about">About</a></li>
-          <li class="nav-item"><a class="nav-link" href="/contact">Contact</a></li>
-          <i class="fas fa fa-search" style="color: white"></i>
-          <input class="input" type="text" placeholder="Search.." />
+          <li class="nav-item"><a class="nav-link" href="../search/index.html">Search</a></li>
+          <li class="nav-item"><a class="nav-link" href="../compose/texteditor.html">Compose</a></li>
         </ul>
       </div>
       <div class="hamburger">
@@ -101,7 +99,7 @@
               <div class="like">
                 <i class="fa-regular fa-heart" 
                  id="heart"></i>
-                 <div class="likes_count">0 Likes</div>
+                 <div class="likes_count" id="likes-section">0 Likes</div>
               </div>
               <div class="comment">
                 <i class="fa-regular fa-comment"></i>
