login/signup modified

--- a/client/login-signup/index.html
+++ b/client/login-signup/index.html
@@ -121,7 +121,7 @@
               id="register-pass"
               required
             />
-            <button type="button" class="submit-btn" onclick="register123()">
+            <button type="button" class="submit-btn" id="register-btn" onclick="register123()">
               Register
             </button>
           </form>
