--- a/public/User/index.html
+++ b/public/User/index.html
@@ -93,15 +93,15 @@
     </div>
   </section>
   <section id="follow-following">
-    <section id="categories followers-section">
-      <h2 style="color: rgb(255, 255, 255);"><span>Followers....</span> </h2>
+    <section id="categories">
+      <h2>Followers....</h2>
     <div class="category-wrap follower-class" id="category-id followers-id">
     </div>
   </section>
   
   
-  <section id="categories following-section">
-    <h2 style="color: rgb(255, 255, 255);"><span> Following....</span></h2>
+  <section id="following-section">
+    <h2>Following....</h2>
     <div class="category-wrap followings-class" id="category-id followings-id">
     </div>
   </section>
