--- a/client/Homepage/index.html
+++ b/client/Homepage/index.html
@@ -16,7 +16,7 @@
     rel="stylesheet" />
   <!-- <link rel="stylesheet" href="/css/all/min.css" /> -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
-  <title>Document</title>
+  <title>Home Page</title>
 </head>
 
 <body>
