--- a/client/blogedit/texteditor.html
+++ b/client/blogedit/texteditor.html
@@ -14,7 +14,7 @@
     rel="stylesheet" />
   <link rel="stylesheet" href="/css/all/min.css" />
   <link  rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"/>  
-    <title>Document</title>
+    <title>Edit Blog</title>
 </head>
 
 <body>
