--- a/client/Blog-opening/blog-opening.html
+++ b/client/Blog-opening/blog-opening.html
@@ -14,7 +14,10 @@
     rel="stylesheet" />
     <link rel="stylesheet" href="/css/all/min.css" />
     <link  rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"/>
-  <title>Document</title>
+    <link rel="shortcut icon" href="../assets/android-chrome-192x192.png" type="image/x-icon">
+    <link rel="shortcut icon" href="../assets/apple-touch-icon.png" type="image/x-icon">
+    <link rel="shortcut icon" href="../assets/favicon.ico" type="image/x-icon">
+  <title>Blog-opening Page</title>
 </head>
 
 <body>
