--- a/client/login-signup/index.html
+++ b/client/login-signup/index.html
@@ -24,6 +24,9 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
     />
+    <link rel="shortcut icon" href="../assets/android-chrome-192x192.png" type="image/x-icon">
+    <link rel="shortcut icon" href="../assets/apple-touch-icon.png" type="image/x-icon">
+    <link rel="shortcut icon" href="../assets/favicon.ico" type="image/x-icon">
     <title>Login/SignUp</title>
   </head>
   <body>
