--- a/client/search/index.html
+++ b/client/search/index.html
@@ -15,7 +15,10 @@
     rel="stylesheet" />
   <link rel="stylesheet" href="/css/all/min.css" />
   <link  rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"/>
-  <title>search</title>
+  <link rel="shortcut icon" href="../assets/android-chrome-192x192.png" type="image/x-icon">
+  <link rel="shortcut icon" href="../assets/apple-touch-icon.png" type="image/x-icon">
+  <link rel="shortcut icon" href="../assets/favicon.ico" type="image/x-icon">
+  <title>Search Page</title>
 </head>
 <body> 
   <div id="loading"></div>
