--- a/public/Homepage/index.html
+++ b/public/Homepage/index.html
@@ -15,8 +15,11 @@
   <link href="https://fonts.googleapis.com/css2?family=Freehand&family=IBM+Plex+Sans:wght@300&display=swap"
     rel="stylesheet" />
   <!-- <link rel="stylesheet" href="/css/all/min.css" /> -->
+  <link rel="shortcut icon" href="../assets/android-chrome-192x192.png" type="image/x-icon">
+  <link rel="shortcut icon" href="../assets/apple-touch-icon.png" type="image/x-icon">
+  <link rel="shortcut icon" href="../assets/favicon.ico" type="image/x-icon">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
-  <title>Document</title>
+  <title>Homepage</title>
 </head>
 
 <body>
@@ -34,8 +37,6 @@
         <li class="nav-item"><a class="nav-link" href="../compose/texteditor.html">Compose</a></li>
         <li class="nav-item nav-item-profile"></li>
         <li></li>
-        <!-- <i class="fas fa fa-search" style="color: white"></i>
-        <input class="input" type="text" placeholder="Search.." onkeypress="handle(event)" /> -->
       </ul>
       </div>
       <div class="hamburger">
@@ -66,12 +67,10 @@
       Checkout the latest <b>Blogs</b> here....
     </div>
     <div class="cover">
-      <!-- <button class="left scroll-btn" onclick="leftScroll()"><</button>  -->
       <div class="scroll-images">
         <div class="cover">
           <div class="scroll-images" id="i1">
           </div>
-          <!-- <button class="right scroll-btn" onclick="rightScroll()">></button> -->
         </div>
   </section>
 
