--- a/public/index.html
+++ b/public/index.html
@@ -24,6 +24,9 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
     />
+    <link rel="shortcut icon" href="../assets/android-chrome-192x192.png" type="image/x-icon">
+    <link rel="shortcut icon" href="../assets/apple-touch-icon.png" type="image/x-icon">
+    <link rel="shortcut icon" href="../assets/favicon.ico" type="image/x-icon">
     <title>Login/SignUp</title>
   </head>
   <body>
@@ -50,11 +53,6 @@
               Register
             </button>
           </div>
-          <!-- <div class="social-icons">
-                    <img src="../assets/fb.png" alt="">
-                    <img src="../assets/tw.png" alt="">
-                    <img src="../assets/gp.png" alt="">
-                </div> -->
                 <form id="login" class="input-group">
                   <input
                     type="email"
@@ -129,8 +127,6 @@
 
      <!--_____________displaying modal _______________  -->
     <!-- Trigger/Open The Modal -->
-    <!-- <button id="myBtn">Open Modal</button> -->
-
     <!-- The Modal -->
     <div id="myModal" class="modal">
       <!-- Modal content -->
@@ -141,7 +137,6 @@
     </div>
 
     <!-- ----------------- including script files ----------------- -->
-    <!-- <script src="https://code.jquery.com/jquery-3.6.1.js" integrity="sha256-3zlB5s2uwoUzrXK3BT7AX3FyvojsraNFxCc2vC/7pNI=" crossorigin="anonymous"></script> -->
     <script src="script.js" type="module"></script>
   </body>
 </html>
