--- a/public/User/index.html
+++ b/public/User/index.html
@@ -14,7 +14,10 @@
     rel="stylesheet" />
     <link rel="stylesheet" href="/css/all/min.css" />
     <link  rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"/>
-  <title>Document</title>
+    <link rel="shortcut icon" href="../assets/android-chrome-192x192.png" type="image/x-icon">
+    <link rel="shortcut icon" href="../assets/apple-touch-icon.png" type="image/x-icon">
+    <link rel="shortcut icon" href="../assets/favicon.ico" type="image/x-icon">
+  <title>Profile Page</title>
 </head>
 
 <body>
@@ -43,31 +46,11 @@
   <!---------------------- creating-user-profile------------------------>
   <section id="profile-user">
     <div class="profile-user-wrap">
-      <!-- <div class="profile-user-img">
-                <img src="../assets/person1.jpg" alt="" />
-                </div>
-                <div class="profile-user-name">
-                <h1>John Doe</h1>
-                </div>
-                <div class="user-followers">
-                  <div class="followers stats">
-                    <div class="count">100 </div><div>Followers</div>
-                  </div>
-                  <div class="followings stats">
-                    <div class="count">100 </div><div>Followings</div>
-                  </div>
-                  <div class="blogs stats">
-                    <div class="count">100 </div><div>Blogs</div>
-                  </div>
-                </div> -->
       <div class="follow">
         <button class="follow-btn" id="follow-unfollow-edit">Follow</button>
       </div>
       <div class="user-desc">
       </div>
-      
-      
-
   </section>
 
   <!--______________________ MYBLOGS_____________________ -->
