--- a/public/compose/texteditor.html
+++ b/public/compose/texteditor.html
@@ -16,7 +16,10 @@
     rel="stylesheet" />
   <link rel="stylesheet" href="/css/all/min.css" />
   <link  rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"/>  
-    <title>Document</title>
+  <link rel="shortcut icon" href="../assets/android-chrome-192x192.png" type="image/x-icon">
+  <link rel="shortcut icon" href="../assets/apple-touch-icon.png" type="image/x-icon">
+  <link rel="shortcut icon" href="../assets/favicon.ico" type="image/x-icon">
+    <title>Compose Blog Page</title>
 </head>
 
 <body>
@@ -107,26 +110,6 @@
           <button id="outdent" class="option-button spacing btn">
             <i class="fa-solid fa-outdent"></i>
           </button>
-          <!-- Headings -->
-          <select id="formatBlock" class="adv-option-button">
-            <optionH1">H1</option>
-            <optionH2">H2</optionH1>
-            <optionH3">H3</optionH2>
-            <optionH4">H4</optionH3>
-            <optionH5">H5</optionH4>
-            <optionH6">H6</optionH5>
-          </select>
-          <!-- Font Size -->
-          <select id="fontSize" class="adv-option-button"></select>
-          <!-- Color -->
-          <!-- <div class="input-wrapper">
-            <input type="color" id="foreColor" class="adv-option-button" />
-            <label for="foreColor">Font Color</label>
-          </div>
-          <div class="input-wrapper">
-            <input type="color" id="backColor" class="adv-option-button" />
-            <label for="backColor">Highlight Color</label>
-          </div> -->
         </div>
         <h2>Title</h2>
         <div id="title-input" contenteditable="true"></div>
