--- a/public/edit-profile/editprofile.html
+++ b/public/edit-profile/editprofile.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Edit Profile Page</title>
     <link rel="stylesheet" href="./editprofile.css">
     <link
       href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300&family=Jost:wght@300;400&display=swap"
@@ -18,6 +18,9 @@
       href="https://fonts.googleapis.com/css2?family=Freehand&family=IBM+Plex+Sans:wght@300&display=swap"
       rel="stylesheet"
     />
+    <link rel="shortcut icon" href="../assets/android-chrome-192x192.png" type="image/x-icon">
+    <link rel="shortcut icon" href="../assets/apple-touch-icon.png" type="image/x-icon">
+    <link rel="shortcut icon" href="../assets/favicon.ico" type="image/x-icon">
 </head>
 <body>
   <div id="loading"></div>
@@ -80,13 +83,6 @@
                 ></textarea>
                 <p style="color: #252525">Change your profile pic</p>
                 <input type="file" name="item" id="register-img" />
-                <!-- <input
-                  class="input-field"
-                  placeholder="Change Password"
-                  name="password"
-                  id="register-pass"
-                  required
-                /> -->
                 <button type="button" class="submit-btn" id="submit-btn" onclick="">
                   Update your profile
                 </button>
