--- a/public/search/index.html
+++ b/public/search/index.html
@@ -15,7 +15,10 @@
     rel="stylesheet" />
   <link rel="stylesheet" href="/css/all/min.css" />
   <link  rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"/>
-  <title>search</title>
+  <link rel="shortcut icon" href="../assets/android-chrome-192x192.png" type="image/x-icon">
+  <link rel="shortcut icon" href="../assets/apple-touch-icon.png" type="image/x-icon">
+  <link rel="shortcut icon" href="../assets/favicon.ico" type="image/x-icon">
+  <title>Search Page</title>
 </head>
 <body> 
   <div id="loading"></div>
@@ -62,30 +65,6 @@
 
     <section id="search search-user">
           <div class="cover" id="search-user-id">
-            <!-- <div class="blog-details">
-              <div class="img-container user-search">
-                <img src="../assets/food.jpg" alt="" />
-              </div>
-              <div class="user-name">
-                Anshu Joshi
-              </div>
-            </div>
-            <div class="blog-details">
-              <div class="img-container user-search">
-                <img src="../assets/VR.jpg" alt="" />
-              </div>
-              <div class="user-name">
-                Anshu Joshi
-              </div>
-            </div>
-            <div class="blog-details">
-              <div class="img-container user-search">
-                <img src="../assets/tw.png" alt="" />
-              </div>
-              <div class="user-name">
-                Anshu Joshi
-              </div>
-            </div> -->
         </div>
     </section>
 
