--- a/public/Blog-opening/blog-opening.html
+++ b/public/Blog-opening/blog-opening.html
@@ -104,15 +104,15 @@
           <div class="check-blogs-you-may-like">
             Other posts by <strong style="color:#f8bf8c;" id="strong123"></strong> ....
           </div>
-          <div class="cover">
-            <div class="scroll-images">
+          <!-- <div class="cover"> -->
+            <!-- <div class="scroll-images"> -->
               <div class="cover">
                 <div class="scroll-images" id="scroll-images">
                   </div>
                 </div>
-              </div>
-            </div>
-          </div>
+              <!-- </div> -->
+            <!-- </div> -->
+          <!-- </div> -->
         </section>
 
       </article>
