--- a/public/User/index.html
+++ b/public/User/index.html
@@ -48,6 +48,7 @@
     <div class="profile-user-wrap">
       <div class="follow">
         <button class="follow-btn" id="follow-unfollow-edit">Follow</button>
+        <button class="follow-btn" id="logout">LOG OUT</button>
       </div>
       <div class="user-desc">
       </div>
