--- a/client/search/index.html
+++ b/client/search/index.html
@@ -26,7 +26,7 @@
     <nav>
       <div class="logo">
         <img src="../assets/High Resolution Logo - Transparent Background.png" alt="">
-        <a href="#" class="name">Un<span>Fold</span> </a>
+        <a href="../Homepage/index.html" class="name">Un<span>Fold</span> </a>
       </div>
         <ul class="nav-list">
           <li class="nav-item"><a class="nav-link" href="../Homepage/index.html">Home</a></li>
