--- a/client/compose/texteditor.html
+++ b/client/compose/texteditor.html
@@ -32,7 +32,8 @@
       <ul class="nav-list">
         <li class="nav-item"><a class="nav-link" href="../Homepage/index.html">Home</a></li>
         <li class="nav-item"><a class="nav-link" href="../search/index.html">Search</a></li>
-        <li class="nav-item"><a class="nav-link" href="">Contact</a></li>
+        <li class="nav-item"><a class="nav-link" href="../compose/texteditor.html">Compose</a></li>
+        <li class="nav-item nav-item-profile"></li>
       </ul>
     </div>
     <div class="hamburger">
