changes in texteditor file

--- a/client/compose/texteditor.html
+++ b/client/compose/texteditor.html
@@ -32,7 +32,7 @@
       <ul class="nav-list">
         <li class="nav-item"><a class="nav-link" href="../Homepage/index.html">Home</a></li>
         <li class="nav-item"><a class="nav-link" href="../search/index.html">Search</a></li>
-        <li class="nav-item"><a class="nav-link" href="">Contact</a></li>
+        <li class="nav-item"><a class="nav-link" href="">Contact</a></li>78
       </ul>
     </div>
     <div class="hamburger">
