major changes in routes

--- a/public/search/index.html
+++ b/public/search/index.html
@@ -26,11 +26,11 @@
     <nav>
       <div class="logo">
         <img src="../assets/High Resolution Logo - Transparent Background.png" alt="">
-        <a href="#" class="name">Un<span>Fold</span> </a>
+        <a href="../Home/" class="name">Un<span>Fold</span> </a>
       </div>
         <ul class="nav-list">
-          <li class="nav-item"><a class="nav-link" href="../Homepage/index.html">Home</a></li>
-          <li class="nav-item"><a class="nav-link" href="../compose/texteditor.html">Compose</a></li>
+          <li class="nav-item"><a class="nav-link" href="../Home">Home</a></li>
+          <li class="nav-item"><a class="nav-link" href="../Blog/Compose">Compose</a></li>
           <i class="fas fa fa-search" style="color: white"></i>
           <input class="input search-input" type="text" placeholder="Search.." />
           <button onclick="searchtheword()" class="search-btn">Search</button>
