--- a/public/Home/index.html
+++ b/public/Home/index.html
@@ -2,105 +2,100 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=, initial-scale=1.0">
-  <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="style.css" />
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" />
   <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300&family=Jost:wght@300;400&display=swap"
     rel="stylesheet" />
   <link href="https://fonts.googleapis.com/css2?family=Freehand&family=IBM+Plex+Sans:wght@300&display=swap"
     rel="stylesheet" />
-    <link rel="stylesheet" href="/css/all/min.css" />
-    <link  rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"/>
-    <link rel="shortcut icon" href="../assets/android-chrome-192x192.png" type="image/x-icon">
-    <link rel="shortcut icon" href="../assets/apple-touch-icon.png" type="image/x-icon">
-    <link rel="shortcut icon" href="../assets/favicon.ico" type="image/x-icon">
-  <title>Profile Page</title>
+  <!-- <link rel="stylesheet" href="/css/all/min.css" /> -->
+  <link rel="shortcut icon" href="../assets/android-chrome-192x192.png" type="image/x-icon">
+  <link rel="shortcut icon" href="../assets/apple-touch-icon.png" type="image/x-icon">
+  <link rel="shortcut icon" href="../assets/favicon.ico" type="image/x-icon">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
+  <title>Homepage</title>
 </head>
 
 <body>
   <div id="loading"></div>
-  <!-- creating the nav -->
-  <nav>
-    <div class="logo">
-      <img src="../assets/High Resolution Logo - Transparent Background.png" alt="">
-      <a href="../Home/" class="name">Un<span>Fold</span> </a>
-    </div>
+  <section id="Landing">
+    <!-- creating the nav -->
+    <nav>
+      <div class="logo">
+        <img src="../assets/High Resolution Logo - Transparent Background.png" alt="">
+        <a href="../../Home/" class="name">Un<span>Fold</span> </a>
+      </div>
       <ul class="nav-list">
-        <li class="nav-item"><a class="nav-link" href="../Home">Home</a></li>
+        <li class="nav-item"><a class="nav-link" href="../Home/">Home</a></li>
         <li class="nav-item"><a class="nav-link" href="../Search">Search</a></li>
         <li class="nav-item"><a class="nav-link" href="../Blog/Compose">Compose</a></li>
         <li class="nav-item nav-item-profile"></li>
+        <li></li>
       </ul>
+      </div>
+      <div class="hamburger">
+        <span class="bar"></span>
+        <span class="bar"></span>
+        <span class="bar"></span>
+      </div>
+    </nav>
+
+    <!-- creating upper-body-landing-page -->
+
+    <div class="upper-body">
+      <div class="upper-body-text">
+        <p>Connecting People, <span>Ideas</span> and Products worldwide !</p>
+      </div>
+      <a href="#latest-blog-section">
+        <button class="landing-btn">Explore Blogs</button>
+      </a>
     </div>
-    <div class="hamburger">
-      <span class="bar"></span>
-      <span class="bar"></span>
-      <span class="bar"></span>
-  </div>
-  </nav>
-
-
-  <!---------------------- creating-user-profile------------------------>
-  <section id="profile-user">
-    <div class="profile-user-wrap">
-      <div class="follow">
-        <button class="follow-btn" id="follow-unfollow-edit">Follow</button>
-        <button class="follow-btn" id="logout">LOG OUT</button>
-      </div>
-      <div class="user-desc">
-      </div>
   </section>
 
-  <!--______________________ MYBLOGS_____________________ -->
 
-  <section id="myblogs">
-    <div id="recent 1">
-      <div class="recent-wrap">
-        <h2>
-          Your <span>BLOGs</span>....
-        </h2>  
-      </div>
-      <div class="latest-cards row 1">
-      </div>
-    </div>
-    <div id="recent 2" class="Bookmarked-blogs">
-      <div class="recent-wrap">
-        <h2>
-          Bookmarked <span>BLOGs</span>....
-        </h2>  
-      </div>
-      <div class="latest-cards row 2" id="bookmarked-blog-card">
-      </div>
-    </div>
-  </section>
-  <section id="follow-following">
-    <section id="categories">
-      <h2>Followers....</h2>
-    <div class="category-wrap follower-class" id="category-id followers-id">
-    </div>
-  </section>
-  
-  
-  <section id="following-section">
-    <h2>Following....</h2>
-    <div class="category-wrap followings-class" id="category-id followings-id">
-    </div>
-  </section>
-</section>
+  <!-- creating latest blog read -->
 
-  <!-- The Modal -->
-  <div id="myModal" class="modal">
-    <!-- Modal content -->
-    <div class="modal-content">
-      <span class="close" >&times;</span>
-      <p id="para" style="color:black; font-size:xx-large;" ></p>
-      <button id="mb1">Yes</button>
-      <button id="mb2">No</button>
+  <section id="latest-blog-section">
+    <div class="latest-blog-div"></div>
+    <div class="check-latest-blog">
+      Checkout the latest <b>Blogs</b> here....
     </div>
-  </div>
+    <div class="cover">
+      <div class="scroll-images">
+        <div class="cover">
+          <div class="scroll-images" id="i1">
+          </div>
+        </div>
+  </section>
+
+  <section id="categories">
+    <h2 style="color: black;"><span>Categories</span> available....</h2>
+    <div class="category-wrap" id="category-id">
+
+    </div>
+
+  </section>
+
+  <!----------------------------------------- Recent Blogs----------------------------- -->
+
+  <section id="recent">
+    <div class="recent-wrap">
+      <h2>
+        See latest <span>blogs by users</span> you follow!
+      </h2>
+    </div>
+    <div class="latest-cards row">
+    </div>
+  </section>
+
+
+
 
   <!----------------------- footer------------------------- -->
   <footer>
@@ -176,9 +171,7 @@
       &#169; UnFold-all right reserved
     </div>
   </footer>
-
-  
-  <script src="script.js" type="module"></script>
+  <script type="module" src="script.js"></script>
 </body>
 
 </html>
